# python-sudoku

./: .gitignore  LICENSE  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  sudoku.py  tests.py
sudoku/: __init__.py  __main__.py  base.py  cli.py
tests/: test_sudoku.py
