[tool.poetry]
name = "python-sudoku"
version = "0.1.0"
description = "Sudoku Solver and Generator"
authors = ["Łukasz Jackiewicz <lukasz.jackiewicz94@gmail.com>"]
license = "MIT"

packages = [
    { include = "sudoku" }
]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"

[tool.poetry.scripts]
sudoku = "sudoku.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
